--- a/Silverware/silverware.uvprojx
+++ b/Silverware/silverware.uvprojx
@@ -622,6 +622,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\rx_bayang_protocol_telemetry_autobind.c</FilePath>
             </File>
+            <File>
+              <FileName>miscellaneous.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\miscellaneous.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
