Added JazzMac's Dshot DMA driver
Purely experimental

--- a/Silverware/silverware.uvprojx
+++ b/Silverware/silverware.uvprojx
@@ -678,6 +678,11 @@
               <FilePath>.\src\drv_dshot.c</FilePath>
             </File>
             <File>
+              <FileName>drv_dshot_dma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\drv_dshot_dma.c</FilePath>
+            </File>
+            <File>
               <FileName>drv_serial.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\drv_serial.c</FilePath>
