--- a/Silverware/silverware.uvprojx
+++ b/Silverware/silverware.uvprojx
@@ -526,11 +526,6 @@
               <FilePath>.\src\rx_nrf24_bayang_telemetry.c</FilePath>
             </File>
             <File>
-              <FileName>rx_sumd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\rx_sumd.c</FilePath>
-            </File>
-            <File>
               <FileName>rx_cg023_protocol.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\rx_cg023_protocol.c</FilePath>
@@ -539,6 +534,11 @@
               <FileName>rx_h7_protocol.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\rx_h7_protocol.c</FilePath>
+            </File>
+            <File>
+              <FileName>rx_sumd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\rx_sumd.c</FilePath>
             </File>
             <File>
               <FileName>rx_cx10blue_protocol.c</FileName>
